syntax = "proto3";
package randomtalk.chat.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/xfrr/randomtalk/proto/v1/chatpb";

// UserMatchRequestedNotification is a message (event) sent when an user connects to the chat
// and a new chat session is created.
message UserMatchRequestedNotification {
  string notification_id = 1;
  string chat_session_id = 2;
  UserAttributes user_attributes = 3;
  UserPreferences user_preferences = 4;
  google.protobuf.Timestamp occurred_at = 5;
}

// UserAttributes contains the user attributes for the chat.
message UserAttributes {
  string id = 1;
  int32 age = 2;
  Gender gender = 3;
}

// UserPreferences contains the user preferences for the chat.
message UserPreferences {
  int32 min_age = 1;
  int32 max_age = 2;
  Gender gender = 3;
  repeated string interests = 4;
}

// Gender is an enum that represents the user gender.
enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
}
